circleci: i686 gcc, only gcc-11 + O2 for now

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,12 +162,12 @@ workflows:
               ignore:
               - master
               - /^ci/(?!circleci).*$/
-      - i686:
-          filters:
-            branches:
-              ignore:
-              - master
-              - /^ci/(?!circleci).*$/
+      # - i686:
+      #     filters:
+      #       branches:
+      #         ignore:
+      #         - master
+      #         - /^ci/(?!circleci).*$/
       - i686-gcc11-O2:
           filters:
             branches:
