--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -20,7 +20,7 @@ blocks:
             - git submodule update --init
             - sudo apt-get update
             - sudo apt-get install -y ninja-build python3-pip python3-setuptools gcovr gcc-${GCC_VERSION} g++-${GCC_VERSION}
-            - pip3 install meson
+            - pip3 install meson==0.55.0
             - mkdir build
             - CC="gcc-${GCC_VERSION}" CXX="g++-${GCC_VERSION}" ~/.local/bin/meson setup build -Db_coverage=true --optimization $(expr $RANDOM % 3)
             - ninja -C build -v
@@ -42,7 +42,7 @@ blocks:
             - git submodule update --init
             - sudo apt-get update
             - sudo apt-get install -y ninja-build python3-pip python3-setuptools gcovr clang-${CLANG_VERSION}
-            - pip3 install meson
+            - pip3 install meson==0.55.0
             - mkdir build
             - CC="clang-${CLANG_VERSION}" CXX="clang++-${CLANG_VERSION}" ~/.local/bin/meson setup build -Db_coverage=true
             - ninja -C build -v
