--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ before_install:
 - cat /proc/meminfo
 
 install:
-- pip3 install meson
+- pip3 install meson==0.55.0
 
 script:
 - meson setup build -Db_coverage=true
