CI appveyor: build & test with MSVC 2022

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,9 +2,12 @@ environment:
   MESON_EXE_WRAPPER: "['C:\\Program Files\\OpenCppCoverage\\OpenCppCoverage.exe', '--export_type=cobertura', '--']"
   CCACHE_MAXSIZE: '500Mi'
   matrix:
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+      VCVARSALL: C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat
+      PYTHON_DIR: C:\Python311-x64
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
       VCVARSALL: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
-      PYTHON_DIR: C:\Python38-x64
+      PYTHON_DIR: C:\Python311-x64
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       VCVARSALL: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat
       PYTHON_DIR: C:\Python38-x64
