axv512: add simde_mm512_{cvtepi32_ps,extractf32x8_ps,_cmpgt_epi16_mask}
Fixes: #961

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -56,7 +56,7 @@ RUN \
   echo ${PACKAGES_TO_INSTALL} ; \
   apt-get install -yq ${PACKAGES_TO_INSTALL}
 
-ENV PATH="/usr/lib/ccache:$PATH"
+ENV PATH="/usr/lib/ccache:$PATH:/root/.local/bin"
 
 # ICC
 RUN \
