--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,6 +6,38 @@ environment:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
       VCVARSALL: C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat
       PYTHON_DIR: C:\Python311-x64
+      FLAGS: /arch:AVX
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      VCVARSALL: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
+      PYTHON_DIR: C:\Python311-x64
+      FLAGS: /arch:AVX
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      VCVARSALL: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat
+      PYTHON_DIR: C:\Python38-x64
+      FLAGS: /arch:AVX
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+      VCVARSALL: C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat
+      PYTHON_DIR: C:\Python38-x64
+      FLAGS: /arch:AVX
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+      VCVARSALL: C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat
+      PYTHON_DIR: C:\Python311-x64
+      FLAGS: /arch:AVX2
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      VCVARSALL: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
+      PYTHON_DIR: C:\Python311-x64
+      FLAGS: /arch:AVX2
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      VCVARSALL: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat
+      PYTHON_DIR: C:\Python38-x64
+      FLAGS: /arch:AVX2
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+      VCVARSALL: C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat
+      PYTHON_DIR: C:\Python38-x64
+      FLAGS: /arch:AVX2
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+      VCVARSALL: C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat
+      PYTHON_DIR: C:\Python311-x64
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
       VCVARSALL: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
       PYTHON_DIR: C:\Python311-x64
@@ -36,6 +68,11 @@ install:
 before_build:
   - ps: |
       git submodule -q update --init --recursive
+      if ($ENV:FLAGS -notlike "*ARCH*") {
+        echo "tests will be run"
+      } else {
+        echo "FLAGS is $ENV:FLAGS"
+      }
 
 build_script:
   - cmd: |
@@ -43,11 +80,19 @@ build_script:
       set CC=ccache.exe cl.exe
       set CXX=ccache.exe cl.exe
       ccache.exe --zero-stats
-      set CFLAGS=/WX /Z7
-      set CXXFLAGS=/WX /Z7
+      set CFLAGS=/WX /Z7 %FLAGS%
+      set CXXFLAGS=/WX /Z7 %FLAGS%
       meson --backend=ninja build
-  - cmd: ninja -C build -v test
-  - cmd: ccache.exe --show-stats
+      meson compile -C build --verbose
+      ccache.exe --show-stats
+test_script:
+  # "meson test -C build" fails due to excessively long command line
+  - ps: |
+      if ($ENV:FLAGS -notlike "*ARCH*") {
+        ninja -C build test
+      } else {
+        echo "skipping test"
+      }
 
 ## This seems to work; data shows up on CodeCov, but it emits an error
 ## which makes AppVeyor thing the whole build failed.  Example:
