simd128: move unary minus to appease msvc native arm64

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -525,6 +525,9 @@ jobs:
   msvc-arm64:
     name: Windows MSVC-AArch64
     runs-on: [windows-latest]
+    env:
+      CFLAGS: /WX /Z7
+      CXXFLAGS: /WX /Z7
     steps:
       - name: Checkout
         uses: actions/checkout@v3
